feat(api): add get account investments
