# apps/api/internal/service/types/pagination.go
@@ -1,0 +1,5 @@
+package types
+
+type CursorPaginationOutput[T any] struct {
+	NextCursor *T `json:"next_cursor"`
+}
